--- a/V77ApplicationWebApi.Web.UnitTests/V77ApplicationWebApi.Web.UnitTests.csproj
+++ b/V77ApplicationWebApi.Web.UnitTests/V77ApplicationWebApi.Web.UnitTests.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Http, Version=5.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -90,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\IgnoreCloseMemoryStream.cs" />
+    <Compile Include="Controllers\VersionControllerTests.cs" />
     <Compile Include="Formatting\PlainTextMediaTypeFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
