[Core] Add `IV77ApplicationConnectionFactory`

--- a/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
+++ b/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ConnectionProperties.cs" />
     <Compile Include="FailedToRunErtException.cs" />
     <Compile Include="IV77ApplicationConnection.cs" />
+    <Compile Include="IV77ApplicationConnectionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
