--- a/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
+++ b/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
@@ -52,7 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionProperties.cs" />
-    <Compile Include="FailedToRunErtException.cs" />
+    <Compile Include="Exceptions\FailedToConnectException.cs" />
+    <Compile Include="Exceptions\FailedToRunErtException.cs" />
     <Compile Include="IV77ApplicationConnection.cs" />
     <Compile Include="IV77ApplicationConnectionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
