--- a/V77ApplicationWebApi.Infrastructure.UnitTests/packages.config
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.11.1" targetFramework="net48" />
+  <package id="Moq" version="4.20.72" targetFramework="net48" />
   <package id="SonarAnalyzer.CSharp" version="9.32.0.97167" targetFramework="net48" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
@@ -9,6 +11,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="8.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="xunit" version="2.9.2" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net48" />
   <package id="xunit.analyzers" version="1.16.0" targetFramework="net48" developmentDependency="true" />
