[Infrastructure] [Core] Improve error handling for `ComV77ApplicationConnection`

--- a/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
+++ b/V77ApplicationWebApi.Core/V77ApplicationWebApi.Core.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionProperties.cs" />
+    <Compile Include="Exceptions\ErrorsCountExceededException.cs" />
+    <Compile Include="Exceptions\ErtReturnedErrorMessageException.cs" />
     <Compile Include="Exceptions\FailedToConnectException.cs" />
     <Compile Include="Exceptions\FailedToRunErtException.cs" />
     <Compile Include="IV77ApplicationConnection.cs" />
