--- a/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
@@ -99,9 +99,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MockHelper.cs" />
+    <Compile Include="Helpers\MoqHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestsHelper.cs" />
+    <Compile Include="Helpers\TestsHelper.cs" />
     <Compile Include="ComV77ApplicationConnectionTests.cs" />
   </ItemGroup>
   <ItemGroup>
