--- a/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\MoqHelper.cs" />
+    <Compile Include="InstanceFactoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\TestsHelper.cs" />
     <Compile Include="ComV77ApplicationConnectionTests.cs" />
