--- a/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
@@ -101,6 +101,7 @@
   <ItemGroup>
     <Compile Include="Helpers\MoqHelper.cs" />
     <Compile Include="InstanceFactoryTests.cs" />
+    <Compile Include="MemberInvokerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\TestsHelper.cs" />
     <Compile Include="ComV77ApplicationConnectionTests.cs" />
