--- a/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
@@ -100,11 +100,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\MessageHelperTests.cs" />
-    <Compile Include="TestsHelpers\MoqHelper.cs" />
+    <Compile Include="MoqHelper.cs" />
     <Compile Include="InstanceFactoryTests.cs" />
     <Compile Include="MemberInvokerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestsHelpers\TestsHelper.cs" />
     <Compile Include="ComV77ApplicationConnectionTests.cs" />
   </ItemGroup>
   <ItemGroup>
