--- a/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
+++ b/V77ApplicationWebApi.Infrastructure.UnitTests/V77ApplicationWebApi.Infrastructure.UnitTests.csproj
@@ -39,6 +39,7 @@
     <Reference Include="Castle.Core, Version=5.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.5.1.1\lib\net462\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=8.0.0.1, Culture=neutral, PublicKeyToken=adb9793829ddae60" />
     <Reference Include="Microsoft.TestPlatform.CoreUtilities, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.TestPlatform.ObjectModel.17.11.1\lib\net462\Microsoft.TestPlatform.CoreUtilities.dll</HintPath>
@@ -99,6 +100,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComV77ApplicationConnectionFactoryTests.cs" />
     <Compile Include="Helpers\MessageHelperTests.cs" />
     <Compile Include="MoqHelper.cs" />
     <Compile Include="InstanceFactoryTests.cs" />
