--- a/V77ApplicationWebApi.Infrastructure/V77ApplicationWebApi.Infrastructure.csproj
+++ b/V77ApplicationWebApi.Infrastructure/V77ApplicationWebApi.Infrastructure.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComV77ApplicationConnectionFactory.cs" />
     <Compile Include="Exceptions\FailedToInitializeException.cs" />
     <Compile Include="Exceptions\FailedToCreateInstanceException.cs" />
     <Compile Include="Exceptions\InitializeTimeoutExceededException.cs" />
